--- a/frontend/src/components/Login/styles.module.css
+++ b/frontend/src/components/Login/styles.module.css
@@ -62,7 +62,7 @@
     font-size: 14px;
     background-color: rgba(243, 70, 70, 0.8);
     color: white;
-    border-radius: 5px;
+    border-radius: 10px;
     text-align: center;
     font-family: 'Poppins', sans-serif;
 }
@@ -74,7 +74,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color:#50C878;
+    background-color:#4FFFB0;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -93,7 +93,7 @@
     background-color: white;
     border-radius: 20px;
     width: 180px;
-    font-weight: 500;
+    font-weight:bold;
     font-size: 15px;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
@@ -111,7 +111,7 @@
     font-size: 15px;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
-    background-color: #50C878;
+    background-color:#4FFFB0;
     color: black;
     margin: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
