--- a/frontend/src/components/Signup/styles.module.css
+++ b/frontend/src/components/Signup/styles.module.css
@@ -32,7 +32,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color:#50C878;
+    background-color:#4FFFB0;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
@@ -65,6 +65,7 @@
 
 .form_container h1 {
     font-size: 25px;
+    font-weight: bold;
     margin-top: 0;
     font-family: 'Poppins', sans-serif;
 }
