--- a/frontend/src/components/Login/styles.module.css
+++ b/frontend/src/components/Login/styles.module.css
@@ -84,7 +84,8 @@
     font-family: 'Poppins', sans-serif;
     margin-top: 0;
     color: black;
-    font-size: 20px;
+    font-size: 25px;
+    font-weight: bold;
     align-self: center;
 }
 .white_btn {
