--- a/frontend/src/components/Signup/styles.module.css
+++ b/frontend/src/components/Signup/styles.module.css
@@ -10,7 +10,7 @@
 .signup_container {
     font-family: 'Poppins', sans-serif;
     width: 100%;
-    min-height: 110vh;
+    min-height: 100vh;
     background-color: #f5f5f5;
     display: flex;
     align-items: center;
@@ -19,7 +19,7 @@
 
 .signup_form_container {
     width: 1000px;
-    height: 550px;
+    height: 650px;
     display: flex;
     border-radius: 10px;
     box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),
@@ -41,6 +41,7 @@
     margin-top: 0;
     color: black;
     font-size: 25px;
+    font-weight: bold;
     align-self: center;
     padding: 30px;
     text-align: center;
