--- a/frontend/src/components/ForgotPassword/styles.module.css
+++ b/frontend/src/components/ForgotPassword/styles.module.css
@@ -46,21 +46,6 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 
 }
-.green_btn {
-    border: none;
-    outline: none;
-    padding: 12px 0;
-    border-radius: 10px;
-    width: 180px;
-    font-weight: 500;
-    font-size: 15px;
-    cursor: pointer;
-    font-family: 'Poppins', sans-serif;
-    background-color: #00cc44;
-    color: black;
-    margin: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-}
 .error_msg,
 .success_msg {
     width: 370px;
@@ -74,5 +59,6 @@
 }
 
 .success_msg {
-    background-color: #3bb19b;
+    background-color:#00cc44;
+    color:black
 }
