--- a/frontend/src/components/Login/styles.module.css
+++ b/frontend/src/components/Login/styles.module.css
@@ -75,11 +75,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color:#4FFFB0;
+    background: linear-gradient(to right, #48BB78, #38B2AC);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
-
 .right h1 {
     font-family: 'Poppins', sans-serif;
     margin-top: 0;
