--- a/frontend/src/components/Signup/styles.module.css
+++ b/frontend/src/components/Signup/styles.module.css
@@ -32,7 +32,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color:#4FFFB0;
+    background: linear-gradient(to right, #48BB78, #38B2AC);
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
@@ -131,7 +131,7 @@
     font-size: 15px;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
-    background-color: #50C878;
+    background-color: linear-gradient(to right, #48BB78, #38B2AC);
     color: black;
     margin: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
