--- a/frontend/src/components/Signup/styles.module.css
+++ b/frontend/src/components/Signup/styles.module.css
@@ -11,7 +11,7 @@
     font-family: 'Poppins', sans-serif;
     width: 100%;
     min-height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #c5c5c5;
     display: flex;
     align-items: center;
     justify-content: center;
